2009-09-10 Magnus Hagdorn
 * libglimmer/glimmer_ts.F90: change documentation strings to doxygen

2009-09-10 Magnus Hagdorn
 * README: document documentation build
 * bootstrap: don't warn about possible incompatibilities in Makefiles
 * configure.in: find doxygen
 * doc/Makefile.am: add targets for doxygen 
 * doc/glimmer-cism.cfg.in: added template doxygen configuration
 * m4macros/amdoxygen.am: makefile snippet for doxygen
 * m4macros/ax_prog_doxygen.m4: autoconf macro for handling doxygen

2009-09-08 Magnus Hagdorn
 * libglimmer/glimmer_vers.F90.in.in: fix fortran error

2009-09-07 Magnus Hagdorn
 * libglimmer/glimmer_vers.F90.in.in: version numbers are no longer stored in
   a module, but accessed through accessors to avoid unnessary recompilations
 * libglide/glide.F90: call new accessor to get version
 * libglide/glimmer_ncparams.F90: ditto
 * libglimmer/Makefile.am: pass top source directory to version script
 * libglimmer/createSVNVersion.sh: run svnversion on top source dir
 * libglimmer/glimmer_global.F90: do not load version numbers

2009-09-07 Magnus Hagdorn
 * doc/common/Makefile.am: forgot to distribute file
 * doc/num/figs/Makefile.am: ditto
 * doc/ug/varlist.tex: include list of variables

2009-09-07 Magnus Hagdorn
 * Makefile.am: forgot sub directory
 * configure.in: rename package to glimmer-cism
 * doc/Makefile.am: do not distribute generated docs
 * doc/dg/figures/Makefile.am: do not distribute images
 * doc/num/figs/Makefile.am: ditto
 * doc/num/gnu/Makefile.am: ditto
 * doc/ug/figs/Makefile.am: ditto
 * doc/ug/Makefile.am: fix paths
 * example-drivers/glint/src/Makefile.am: fix bug
 * tests/exact-isothermal/src/Makefile.am:  rename installation directory

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: handle new directories
 * libglint/Makefile.am: forgot a file
 * add glint examples

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: handle new directories